# solana_identity_system

./: .gitignore  Anchor.toml  Makefile  README.md  package-lock.json  package.json  tsconfig.json
app/: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-load.sh  package-lock.json  package.json  vite.config.ts
app/app/: entry.client.tsx  root.tsx
app/app/components/: AvatarSelector.tsx  SayHi.tsx  footer.tsx  header.tsx
app/app/components/3d/: CameraCheck.tsx  SceneWithModel.tsx  ScreenShot.tsx  UploadedModel.tsx  animations.ts
app/app/routes/: _index.tsx  about.tsx  api.upload-metadata.ts  deployer.tsx  generate.tsx  market.tsx  mint.tsx  minter.tsx  profile.tsx
app/app/styles/: tailwind.css
app/app/types/: nft.ts
app/app/utils/: burnNft.ts  bytes.ts  fetchUserNfts.ts  ipfsUrls.ts  saveBlob.tsx
app/scripts/: deploy.sh
programs/avatars/: Cargo.toml
programs/avatars/src/: lib.rs
programs/minter/: Cargo.toml
programs/minter/src/: lib.rs
programs/solana-avatars/: Cargo.toml
programs/solana-avatars/src/: lib.rs
sdk/: package.json  tsconfig.json
sdk/idl/: avatar_nft_minter.json  avatar_nft_minter.ts  user_avatar.json  user_avatar.ts  user_profile.json  user_profile.ts
sdk/src/: index.ts  minter.ts  profile.ts
tests/: constants.ts  minter.ts  profile.ts  solana-avatars.ts
