[package]
name = "solana-avatars"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_avatars"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
